# pyproject.toml
[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ordipool"
version = "1.1.1"
description = "A mempool sdk library tailored for multiple usecases including ordinals"
readme = "README.md"
authors = [{name = "twosatsmaxi"}]
license = {file = "LICENSE"}
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["mempool", "ordinals", "sdk", "library", "bitmap"]
dependencies = [
    "requests~=2.31.0",
]
requires-python = ">=3.10"
[project.urls]
Homepage = "https://github.com/twosatsmaxi/ordipool"